From detatched HEAD

--- a/Stockery/MainWindow.xaml
+++ b/Stockery/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Stockery"
+        xmlns:view="clr-namespace:Stockery.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
@@ -11,30 +12,9 @@
             <ColumnDefinition Width="200"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <ListView ItemsSource="{Binding Stocks}"
-                  SelectedItem="{Binding SelectedStock, Mode=TwoWay}"
-                  DisplayMemberPath="Name" />
-        <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Label Content="Name" Margin="10 10 10 10"/>
-            <TextBox Grid.Row="1" Text="{Binding SelectedStock.Name,
-                Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"/>
-            <Label Grid.Row="2"  Content="Ticker" Margin="10 0"/>
-            <TextBox Grid.Row="3" Text="{Binding SelectedStock.Ticker,
-                Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"/>
-            <Label Grid.Row="4"  Content="Historical Price" Margin="10 0"/>
-            <TextBox Grid.Row="5" Text="{Binding SelectedStock.HistoricalPrices[0].Date,
-                Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"/>
-            <ListView Grid.Row="6" ItemsSource="{Binding SelectedStock}"
-                      DisplayMemberPath="Name"/>
-        </Grid>
+        <view:NavigationView DataContext="{Binding NavigationViewModel}"/>
+        <view:StockDetailView Grid.Column="1" DataContext="{Binding StockDetailViewModel}"/>
+
+        
     </Grid>
 </Window>
