--- a/Stockery/View/StockDetailView.xaml
+++ b/Stockery/View/StockDetailView.xaml
@@ -6,26 +6,30 @@
              xmlns:local="clr-namespace:Stockery.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Label Content="Name" Margin="10 10 10 10"/>
-            <TextBox Grid.Row="1" Text="{Binding Stock.Name,
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Label Content="Name" Margin="10 10 10 10"/>
+        <TextBox Grid.Row="1" Text="{Binding Stock.Name,
                 Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"/>
-            <Label Grid.Row="2"  Content="Ticker" Margin="10 0"/>
-            <TextBox Grid.Row="3" Text="{Binding Stock.Ticker,
+        <Label Grid.Row="2"  Content="Ticker" Margin="10 0"/>
+        <TextBox Grid.Row="3" Text="{Binding Stock.Ticker,
                 Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"/>
-            <Label Grid.Row="4"  Content="Historical Price" Margin="10 0"/>
-            <TextBox Grid.Row="5" Text="{Binding Stock.HistoricalPrices[0].Date,
+        <Label Grid.Row="4"  Content="Historical Price" Margin="10 0"/>
+        <TextBox Grid.Row="5" Text="{Binding Stock.HistoricalPrices[0].Date,
                 Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"/>
-            <ListView Grid.Row="6" ItemsSource="{Binding Stock}"
+        <ListView Grid.Row="6" ItemsSource="{Binding Stock}"
                       DisplayMemberPath="Name"/>
-        </Grid>
+        <StackPanel Grid.Row="7" Orientation="Horizontal">
+            <Button Content="Save" Width="125" Margin="10" Command="{Binding SaveCommand}"/>
+        </StackPanel>
+    </Grid>
 </UserControl>
