--- a/Stockery/MainWindow.xaml
+++ b/Stockery/MainWindow.xaml
@@ -6,14 +6,23 @@
         xmlns:local="clr-namespace:Stockery"
         xmlns:view="clr-namespace:Stockery.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Stockery" Height="450" Width="800">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <view:NavigationView DataContext="{Binding NavigationViewModel}"/>
-        <view:StockDetailView Grid.Column="1" DataContext="{Binding StockDetailViewModel}"/>
+        <Menu Grid.ColumnSpan="2" FontSize="20">
+            <MenuItem Header="Create">
+                <MenuItem Header="Add Stock" Command="{Binding AddNewStockCommand}"/>
+            </MenuItem>
+        </Menu>
+        <view:NavigationView Grid.Row="1" DataContext="{Binding NavigationViewModel}"/>
+        <view:StockDetailView Grid.Row="1" Grid.Column="1" DataContext="{Binding StockDetailViewModel}"/>
 
         
     </Grid>
