--- a/Stockery/View/StockDetailView.xaml
+++ b/Stockery/View/StockDetailView.xaml
@@ -30,6 +30,7 @@
                       DisplayMemberPath="Name"/>
         <StackPanel Grid.Row="7" Orientation="Horizontal">
             <Button Content="Save" Width="125" Margin="10" Command="{Binding SaveCommand}"/>
+            <Button Content="Delete" Width="125" Margin="10" Command="{Binding DeleteCommand}"/>
         </StackPanel>
     </Grid>
 </UserControl>
