--- a/Stockery/View/NavigationViewBond.xaml
+++ b/Stockery/View/NavigationViewBond.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Stockery.View.NavigationView"
+﻿<UserControl x:Class="Stockery.View.NavigationViewBond"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,9 +11,9 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Content="Stocks" Margin="10 10 10 10"/>
-        <ListView Grid.Row="1" ItemsSource="{Binding Stocks}"
-                  SelectedItem="{Binding SelectedStock,Mode=TwoWay}"
-                  DisplayMemberPath="DisplayMember" />
+        <Label Grid.Row="0" Content="Bonds" Margin="10 10 10 10"/>
+        <ListView Grid.Row="1" ItemsSource="{Binding Bonds}"
+                  SelectedItem="{Binding SelectedBond,Mode=TwoWay}"
+                  DisplayMemberPath="DisplayMember"/>
     </Grid>
 </UserControl>
