--- a/Stockery/View/BondDetailView.xaml
+++ b/Stockery/View/BondDetailView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Stockery.View.StockDetailView"
+﻿<UserControl x:Class="Stockery.View.BondDetailView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,19 +11,13 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Label Content="Name" Margin="10 10 10 10"/>
-        <TextBox Grid.Row="1" Text="{Binding Stock.Name,
+        <TextBox Grid.Row="1" Text="{Binding Bond.Name,
                 Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"/>
-        <Label Grid.Row="2"  Content="Ticker" Margin="10 0"/>
-        <TextBox Grid.Row="3" Text="{Binding Stock.Ticker,
-                Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="10 0 10 10"/>
-        <StackPanel Grid.Row="4" Orientation="Horizontal">
-            <Button Content="Save" Width="125" Margin="10" Command="{Binding SaveCommand}"/>
-            <Button Content="Delete" Width="125" Margin="10" Command="{Binding DeleteCommand}"/>
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <Button Content="Save" Width="125" Margin="10" Command="{Binding SaveBondCommand}"/>
+            <Button Content="Delete" Width="125" Margin="10" Command="{Binding DeleteBondCommand}"/>
         </StackPanel>
     </Grid>
 </UserControl>
